# tg-feedback-bot-ru

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  bot_env.example  compose.yaml  dev-requirements.txt  feedback_bot.py  mise.toml  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: ci.yml  release.yml
feedback_bot/: __main__.py  feedback_bot.py  helpers.py  settings.py  utils.py
src/tg_feedback_bot_ru/: _version.py  album_forwarder.py  feedback_bot.py  filters.py  helpers.py  settings.py  stopped.py  storage_keys.py  types.py
